# local_development

./: .gitignore  README.md  compose.yml
api/: README.md  pyproject.toml
api/app/: main.py
api/app/api/: member.py  news.py  test.py
api/app/api/test_list/: category.py  itme.py
api/app/db/: db.py  migrate_db.py
api/app/models/: common.py  member.py  news.py
api/app/shemas/: main.py  member.py  news.py
docker/: README.md
docker/mysql/: init.sql
docker/nginx/: default.conf
docker/php/: Dockerfile  php.ini
docker/python/: Dockerfile  requirements.txt
front/: package-lock.json  package.json  vite.config.js
front/resources/js/: app.js
front/resources/js/components/: exampleComponent.vue
front/resources/views/: welcome.blade.php
