[project]
name = "web-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
